--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Josefin+Sans:wght@300;400&family=Play&family=Playball&family=Poppins:wght@200;300;500;600&display=swap");
 
 .container {
-  width: 1280px;
+  max-width: 1280px;
 }
 .tree img {
   position: fixed;
@@ -9,28 +9,95 @@
   right: 550px;
   height: 100%;
   z-index: 2;
+  /* opacity: 20%; */
 }
 .logo {
-  height: 100%;
+  height: 100vh;
 }
 .logo img {
-  position: relative;
+  position: absolute;
   left: 45%;
   top: 150px;
   width: 600px;
 }
 .logo h3 {
-  position: relative;
+  position: absolute;
   left: 45%;
-  top: 60px;
+  top: 400px;
   width: fit-content;
   font-size: 60px;
-  font-family: 'Playball';
+  font-family: "Playball";
 }
 .logo h2 {
-  position: relative;
+  position: absolute;
   left: 70%;
-  top: 60px;
+  top: 480px;
   width: fit-content;
   font-size: 30px;
+}
+.about{
+  position: relative;
+  height: 100vh;
+  z-index: 4;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.about h1{
+  font-size: 80px;
+  position: relative;
+}
+.scrolled{
+  opacity: 20%;
+  transition: ease-in 1s;
+}
+@media (max-width: 1000px) {
+  .tree img {
+    right: 100px;
+  }
+  .logo img {
+    left: 45%;
+    top: 200px;
+    width: 450px;
+  }
+  .logo h3 {
+    top: 380px;
+    font-size: 50px;
+  }
+  .logo h2 {
+    top: 430px;
+    font-size: 20px;
+  }
+}
+@media (max-width: 500px) {
+  .logo {
+    max-width: 500px;
+  }
+  .tree img {
+    right: -180px;
+    height: 100vh;
+  }
+  .logo img {
+    left: 40%;
+    top: 230px;
+    width: 200px;
+  }
+  .logo h3 {
+    left: 130px;
+    top: 310px;
+    font-size: 20px;
+  }
+  .logo h2 {
+    left: 180px;
+    top: 340px;
+    font-size: 15px;
+  }
+  .about{
+    height: 100vh;
+    margin: 0 5px;
+  }
+  .about h1{
+    margin-top: 10px;
+    font-size: 40px;
+    position: relative;
+  }
 }
