--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -42,13 +42,22 @@
   max-width: 1000px;
   margin: 0 auto;
 }
+.about .info{
+  display: flex;
+  margin: 10px;
+  gap: 30px;
+}
+.about img{
+  height: 400px;
+}
 .about h1{
   font-size: 80px;
   position: relative;
 }
+
 .scrolled{
   opacity: 20%;
-  transition: ease-in 1s;
+  transition: ease-in 0.5s;
 }
 @media (max-width: 1000px) {
   .tree img {
@@ -66,6 +75,14 @@
   .logo h2 {
     top: 430px;
     font-size: 20px;
+  }
+  .about .info{
+
+    display: block;
+    justify-content: center;
+   
+    /* flex-direction: column; */
+    
   }
 }
 @media (max-width: 500px) {
@@ -95,9 +112,13 @@
     height: 100vh;
     margin: 0 5px;
   }
+  
   .about h1{
     margin-top: 10px;
-    font-size: 40px;
+    font-size: 50px;
     position: relative;
+    text-align: center;
   }
+  .about img{
+margin-bottom: 20px;  }
 }
