--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -31,6 +31,8 @@
   border-radius: 5px;
   border: 1px none;
   color: #f6fff8;
+  text-align: center;
+  /* padding: 5px; */
 }
 .Mylink:not(.active):hover {
   text-decoration: none;
@@ -40,8 +42,8 @@
 .cart{
   padding: 5px 10px;
   font-size: 18px;
-  /* border-radius: 50%; */
-  /* box-shadow: 10px 0px 30px -5px #87cd92; */
+  position: relative;
+  left: 55%;
 }
 
 @media (max-width: 1000px) {
@@ -50,6 +52,13 @@
       justify-content: center;
       gap: 30px;
       /* border-radius: 0px; */
+  }
+  .ms-auto{
+    margin-top: 20px;
+  }
+  .cart{
+    left: 35%;
+
   }
 
 }
@@ -60,5 +69,8 @@
   }
   .toggle-btn {
     margin: 0 10px;
+  }
+  .cart{
+    left: 50px;
   }
 }
